[package]
name = "processing-listener"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
google-cloud-gax = "0.8.1"
google-cloud-googleapis = "0.5.1"
google-cloud-pubsub = "0.5.1"
actix-web = "4.2.1"
options = { path = "../options" }
rayon = "1.5.3"
